<?xml version="1.0"?>
<package format="2">
  <name>turtlebot3_nav</name>
  <version>0.0.0</version>
  <description>The turtlebot3_nav package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="ubuntu18x86@todo.todo">ubuntu18x86</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


      <buildtool_depend>catkin</buildtool_depend>

    <build_depend>cmake_modules</build_depend>
    <build_depend>message_generation</build_depend>
    <build_depend>tf2_geometry_msgs</build_depend>
    <build_depend>tf2_sensor_msgs</build_depend>
    <build_depend>pcl_conversions</build_depend>
    <build_depend>pcl_ros</build_depend>
    <build_depend>costmap_2d</build_depend>
    <build_depend>rospy</build_depend>

    <depend>dynamic_reconfigure</depend>
    <depend>eigen</depend>
    <depend>geometry_msgs</depend>
    <depend>map_msgs</depend>
    <depend>message_filters</depend>
    <depend>nav_msgs</depend>
    <depend>pluginlib</depend>
    <depend>roscpp</depend>
    <depend>rostest</depend>
    <depend>sensor_msgs</depend>
    <depend>std_msgs</depend>
    <depend>tf2</depend>
    <depend>tf2_ros</depend>
    <depend>visualization_msgs</depend>
    <build_export_depend>rospy</build_export_depend>
  
    <exec_depend>message_runtime</exec_depend>
    <exec_depend>rosconsole</exec_depend>
    <exec_depend>pcl_conversions</exec_depend>
    <exec_depend>pcl_ros</exec_depend>
    <exec_depend>costmap_2d</exec_depend>
    <exec_depend>rospy</exec_depend>
    <exec_depend>stage_ros</exec_depend>
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
